Möbelmon mobile fix

--- a/css/stylemobelmon.css
+++ b/css/stylemobelmon.css
@@ -161,3 +161,41 @@ body
 {
     color: #F8E9DF;
 }
+
+@media screen and (max-width: 799px)
+{
+    #main
+    {
+        max-width: 100vw;
+    }
+
+    .hero-logo
+    {
+        max-width: 100%;
+    }
+
+    .hero-copy
+    {
+        max-width: 90%;
+    }
+
+    .copy
+    {
+        max-width: 100%;
+    }
+
+    .block
+    {
+        max-width: 100%;
+    }
+    
+    .image-grid
+    {
+        max-width: 100%;
+    }
+
+    .screenshot
+    {
+        width: calc(50% - 20px);
+    }
+}
